--- a/app/globals.css
+++ b/app/globals.css
@@ -1,17 +1,18 @@
-
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-}  
+  scroll-behavior: smooth;
+}
 
-.container{
+.container {
   max-width: 1200px;
   margin: 0 auto;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   font-family: 'Inter', sans-serif;
   background: transparent;
