--- a/components/hero/styles.module.scss
+++ b/components/hero/styles.module.scss
@@ -1,12 +1,14 @@
 .hero{
+    position: relative;
     padding-top: 80px;
     margin-bottom: 200px;
-    z-index: 1;
     .content{
+        font-family: "Orbitron", sans-serif;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
         .title{
             font-size: 74px;
             color: aqua;
@@ -16,6 +18,32 @@
             font-size: 44px;
             color: aqua;
             font-weight: 400;
+        }
+        .span1{
+            font-size: 34px;
+            font-weight: 400;
+            color: #fff;
+        }
+        .span2{
+            color: aqua;
+            font-size: 24px;
+            font-weight: 200;
+        }
+        p{
+            font-size: 16px;
+            font-weight: 400;
+            color: #b9b9b9;
+            margin: 10px 0 20px;
+        }
+    }
+}
+@media(max-width: 560px){
+    .hero{
+        .content{
+            width: 90%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
     }
 }
