--- a/components/security/styles.module.scss
+++ b/components/security/styles.module.scss
@@ -112,5 +112,9 @@
         font-size: 1.2rem;
         opacity: 0.8;
     }
-
+}
+@media(max-width:560px){
+    .securityButton{
+        width: 90%;
+    }
 }
