--- a/components/technology/styles.module.scss
+++ b/components/technology/styles.module.scss
@@ -43,7 +43,7 @@
 
 
 .card {
-  background: #1e70e9; /* Slightly lighter than container for depth */
+  background: none; /* Slightly lighter than container for depth */
   border: 1px solid rgba(30, 112, 233, 0.2); /* Subtle blue border */
   border-radius: 8px;
   padding: 30px;
