--- a/components/Backgound/background.module.scss
+++ b/components/Backgound/background.module.scss
@@ -1,9 +1,26 @@
+// .canvas {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   z-index: 0;
+//   background: #000; // черный фон
+// }
+
 .canvas {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 0; // фон позади всего
-  background: #000; // черный фон
+  
+  /* * КЛЮЧЕВОЕ ИСПРАВЛЕНИЕ: Убираем явный черный фон с канваса, 
+   * чтобы сквозь него просвечивал фон <body> или родителя.
+   * Если вы хотите, чтобы фон был темным, его надо задавать 
+   * в родительском элементе, а не здесь. 
+   */
+  background: transparent; 
+  
+  z-index: -10; /* !!! НОВОЕ ИСПРАВЛЕНИЕ: Опускаем его ниже всего контента !!! */
 }
