--- a/widgets/header/styles.module.scss
+++ b/widgets/header/styles.module.scss
@@ -40,11 +40,13 @@ $transition-speed: 0.3s;
 .logoTitle {
   font-size: 22px;
   font-weight: 600;
+  font-family: var(--font-orbitron);
 }
 
 .logoSubtitle {
   font-size: 0.85rem;
   color: #a0a0a0;
+  font-family: var(--font-orbitron);
 }
 
 /* Навигация */
@@ -53,6 +55,7 @@ $transition-speed: 0.3s;
   gap: 40px;
   font-size: 16px;
   transition: all 0.3s ease;
+  z-index: 100;
 }
 
 .nav a {
@@ -85,7 +88,6 @@ $transition-speed: 0.3s;
   display: flex;
   align-items: center;
   background: #0f172a;
-  border: 1px solid #1e40af;
   border-radius: 40px;
   padding: 4px;
   box-shadow: 0 0 10px rgba(30, 64, 175, 0.3);
@@ -104,6 +106,7 @@ $transition-speed: 0.3s;
   transition: all 0.3s ease;
   font-size: 0.9rem;
   box-shadow: #1e40af;
+  z-index: 100;
 }
 
 .langBtn:hover {
@@ -161,7 +164,6 @@ $transition-speed: 0.3s;
   transform: translateY(-8px) rotate(-45deg);
 }
 
-/* Мобильная версия */
 @media (max-width: 900px) {
   .nav {
     position: absolute;
@@ -176,6 +178,10 @@ $transition-speed: 0.3s;
     transform: translateY(-200%);
     opacity: 0;
     pointer-events: none;
+  }
+
+  .langBtn {
+    width: 50%;
   }
 
   .navOpen {
