--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@ body {
   height: 100%;
   font-family: 'Inter', sans-serif;
   background: #000;
+  cursor: url('/search.svg') 12 12, auto;
 }
 
 body {
