--- a/components/Backgound/background.module.scss
+++ b/components/Backgound/background.module.scss
@@ -1,12 +1,3 @@
-// .canvas {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   z-index: 0;
-//   background: #000; // черный фон
-// }
 
 .canvas {
   position: fixed;
@@ -14,13 +5,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  
-  /* * КЛЮЧЕВОЕ ИСПРАВЛЕНИЕ: Убираем явный черный фон с канваса, 
-   * чтобы сквозь него просвечивал фон <body> или родителя.
-   * Если вы хотите, чтобы фон был темным, его надо задавать 
-   * в родительском элементе, а не здесь. 
-   */
   background: transparent; 
-  
-  z-index: -10; /* !!! НОВОЕ ИСПРАВЛЕНИЕ: Опускаем его ниже всего контента !!! */
+  z-index: -10; 
 }
